mt/lab03/src/main/java/HelloParser.java
// Generated from /Users/admin/Documents/University/#GitHub/mt/lab03/src/main/java/Hello.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HelloParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BASE_TYPE=1, INTEGER=2, DOUBLE=3, BOOL=4, WORD=5, ANY_WORD=6, WHITESPACE=7, 
		COMMA=8, OPENBRACE=9, CLOSEBRACE=10, COLON=11, DCOLON=12, SCOLON=13, PIPE=14, 
		ARROW=15, ASSGM=16, ADD=17, SUB=18, MUL=19, FAC=20, DIV=21, MOD=22, EQ=23, 
		NEQ=24, LES=25, GRE=26, LE=27, GE=28, AND=29, OR=30;
	public static final int
		RULE_all_file = 0, RULE_global_statement = 1, RULE_function = 2, RULE_function_h = 3, 
		RULE_main_function_part = 4, RULE_arguments = 5, RULE_argument = 6, RULE_function_usage = 7, 
		RULE_function_type = 8, RULE_element = 9, RULE_assignation = 10, RULE_expression = 11, 
		RULE_condition_operation = 12, RULE_condition = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"all_file", "global_statement", "function", "function_h", "main_function_part", 
			"arguments", "argument", "function_usage", "function_type", "element", 
			"assignation", "expression", "condition_operation", "condition"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "','", "'('", "')'", 
			"':'", "'::'", "';'", "'|'", "'->'", "'='", "'+'", "'-'", "'*'", "'!'", 
			"'/'", "'%'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BASE_TYPE", "INTEGER", "DOUBLE", "BOOL", "WORD", "ANY_WORD", "WHITESPACE", 
			"COMMA", "OPENBRACE", "CLOSEBRACE", "COLON", "DCOLON", "SCOLON", "PIPE", 
			"ARROW", "ASSGM", "ADD", "SUB", "MUL", "FAC", "DIV", "MOD", "EQ", "NEQ", 
			"LES", "GRE", "LE", "GE", "AND", "OR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Hello.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HelloParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class All_fileContext extends ParserRuleContext {
		public StringBuilder val;
		public Global_statementContext gs;
		public TerminalNode EOF() { return getToken(HelloParser.EOF, 0); }
		public List<Global_statementContext> global_statement() {
			return getRuleContexts(Global_statementContext.class);
		}
		public Global_statementContext global_statement(int i) {
			return getRuleContext(Global_statementContext.class,i);
		}
		public All_fileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_all_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterAll_file(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitAll_file(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitAll_file(this);
			else return visitor.visitChildren(this);
		}
	}

	public final All_fileContext all_file() throws RecognitionException {
		All_fileContext _localctx = new All_fileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_all_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((All_fileContext)_localctx).val =  new StringBuilder(); 
			setState(32); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(29);
				((All_fileContext)_localctx).gs = global_statement();
				 _localctx.val.append("\n" + ((All_fileContext)_localctx).gs.val); 
				}
				}
				setState(34); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << DOUBLE) | (1L << BOOL) | (1L << WORD))) != 0) );
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Global_statementContext extends ParserRuleContext {
		public StringBuilder val;
		public FunctionContext fd;
		public AssignationContext assignation;
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public AssignationContext assignation() {
			return getRuleContext(AssignationContext.class,0);
		}
		public Global_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterGlobal_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitGlobal_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitGlobal_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Global_statementContext global_statement() throws RecognitionException {
		Global_statementContext _localctx = new Global_statementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_global_statement);
		try {
			setState(44);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				((Global_statementContext)_localctx).fd = function();
				 ((Global_statementContext)_localctx).val =  ((Global_statementContext)_localctx).fd.val; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				((Global_statementContext)_localctx).assignation = assignation();
				 ((Global_statementContext)_localctx).val =  new StringBuilder((((Global_statementContext)_localctx).assignation!=null?_input.getText(((Global_statementContext)_localctx).assignation.start,((Global_statementContext)_localctx).assignation.stop):null));
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public StringBuilder val;
		public Function_hContext fh;
		public Main_function_partContext fb;
		public Function_hContext function_h() {
			return getRuleContext(Function_hContext.class,0);
		}
		public List<Main_function_partContext> main_function_part() {
			return getRuleContexts(Main_function_partContext.class);
		}
		public Main_function_partContext main_function_part(int i) {
			return getRuleContext(Main_function_partContext.class,i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			 ((FunctionContext)_localctx).val =  new StringBuilder();
			{
			setState(47);
			((FunctionContext)_localctx).fh = function_h();

			        if (((FunctionContext)_localctx).fh.arg_types.size() >= 1) {
			            _localctx.val.append(((FunctionContext)_localctx).fh.val);
			        }
			    
			}
			setState(53);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(50);
				((FunctionContext)_localctx).fb = main_function_part();

				        if (((FunctionContext)_localctx).fh.arg_types.size() > 1) {
				            for (int i = ((FunctionContext)_localctx).fh.arg_types.size() - 1; i > 0; i--) {
				                _localctx.val.append("  ");
				                _localctx.val.append(((FunctionContext)_localctx).fh.arg_types.get(i) + " " + ((FunctionContext)_localctx).fb.args_names.get(i - 1) + " = arg" + (((FunctionContext)_localctx).fh.arg_types.size() - i - 1) + ";\n");
				            }
				            Boolean started = false;
				            int cntEQ = 0;
				            for (int j = 0; j < ((FunctionContext)_localctx).fb.args_conds.size(); j++) {
				                if (((FunctionContext)_localctx).fb.args_conds.get(j) != "True") {
				                    cntEQ += 1;
				                }
				            }

				            if (cntEQ > 0) {
				                _localctx.val.append("\n  if ");
				                if (cntEQ > 1) {
				                    _localctx.val.append("(");
				                }
				                for (int j = 0; j < ((FunctionContext)_localctx).fb.args_conds.size(); j++) {
				                    if (((FunctionContext)_localctx).fb.args_conds.get(j) == "True") continue;
				                    if (started) {
				                        _localctx.val.append(" && ");
				                    }
				                    started = true;
				                    _localctx.val.append("(" + ((FunctionContext)_localctx).fb.args_conds.get(j) + ")");
				                }
				                if (cntEQ > 1) {
				                    _localctx.val.append(")");
				                }
				                _localctx.val.append(" {\n    return " + ((FunctionContext)_localctx).fb.body + ";\n  }\n");
				            }
				        } else {
				            _localctx.val.append(") {\n    " + ((FunctionContext)_localctx).fb.body + ";\n");
				        }
				    
				}
				break;
			}
			setState(58); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(55);
					((FunctionContext)_localctx).fb = main_function_part();

					            if (((FunctionContext)_localctx).fh.arg_types.size() > 1) {
					                Boolean started = false;
					                    int cntEQ = 0;
					                    for (int j = 0; j < ((FunctionContext)_localctx).fb.args_conds.size(); j++) {
					                        if (((FunctionContext)_localctx).fb.args_conds.get(j) != "True") {
					                            cntEQ += 1;
					                        }
					                    }

					                    if (cntEQ > 0) {
					                        _localctx.val.append("\n  if ");
					                        if (cntEQ > 1) {
					                            _localctx.val.append("(");
					                        }
					                        for (int j = 0; j < ((FunctionContext)_localctx).fb.args_conds.size(); j++) {
					                            if (((FunctionContext)_localctx).fb.args_conds.get(j) == "True") continue;
					                            if (started) {
					                                _localctx.val.append(" && ");
					                            }
					                            started = true;
					                            _localctx.val.append("(" + ((FunctionContext)_localctx).fb.args_conds.get(j) + ")");
					                        }
					                        if (cntEQ > 1) {
					                            _localctx.val.append(")");
					                        }
					                        _localctx.val.append(" {\n    return " + ((FunctionContext)_localctx).fb.body + ";\n  }\n");
					                    } else {
					                        _localctx.val.append("\n  return " + ((FunctionContext)_localctx).fb.body + ";\n");
					                    }
					            } else {
					                _localctx.val.append(") {\n    " + ((FunctionContext)_localctx).fb.body + ";\n");
					            }
					        
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(60); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			_localctx.val.append("}\n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_hContext extends ParserRuleContext {
		public String val;
		public ArrayList<String> arg_types;
		public Token WORD;
		public Function_typeContext function_type;
		public TerminalNode WORD() { return getToken(HelloParser.WORD, 0); }
		public TerminalNode DCOLON() { return getToken(HelloParser.DCOLON, 0); }
		public Function_typeContext function_type() {
			return getRuleContext(Function_typeContext.class,0);
		}
		public Function_hContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_h; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterFunction_h(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitFunction_h(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitFunction_h(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_hContext function_h() throws RecognitionException {
		Function_hContext _localctx = new Function_hContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_h);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			((Function_hContext)_localctx).WORD = match(WORD);
			setState(65);
			match(DCOLON);
			setState(66);
			((Function_hContext)_localctx).function_type = function_type();

			        ((Function_hContext)_localctx).arg_types =  ((Function_hContext)_localctx).function_type.val;
			        ((Function_hContext)_localctx).val =  _localctx.arg_types.get(0) + ' ' + (((Function_hContext)_localctx).WORD!=null?((Function_hContext)_localctx).WORD.getText():null) + "(";

			        for (int i = 0; i < _localctx.arg_types.size() - 1; i++) {
			            _localctx.val += _localctx.arg_types.get(_localctx.arg_types.size() - i - 1) + " arg" + i + (i == _localctx.arg_types.size() - 2? ") {\n" : ", ");
			        }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_function_partContext extends ParserRuleContext {
		public String body;
		public ArrayList<String> args_names;
		public ArrayList<String> args_conds;
		public ArgumentsContext ad;
		public AssignationContext assignation;
		public TerminalNode WORD() { return getToken(HelloParser.WORD, 0); }
		public TerminalNode ASSGM() { return getToken(HelloParser.ASSGM, 0); }
		public AssignationContext assignation() {
			return getRuleContext(AssignationContext.class,0);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public Main_function_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_function_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterMain_function_part(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitMain_function_part(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitMain_function_part(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Main_function_partContext main_function_part() throws RecognitionException {
		Main_function_partContext _localctx = new Main_function_partContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_main_function_part);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(WORD);
			setState(70);
			((Main_function_partContext)_localctx).ad = arguments();
			setState(71);
			match(ASSGM);
			setState(72);
			((Main_function_partContext)_localctx).assignation = assignation();

			    ((Main_function_partContext)_localctx).body =  ((Main_function_partContext)_localctx).assignation.view;
			    ((Main_function_partContext)_localctx).args_names =  ((Main_function_partContext)_localctx).ad.args_names;
			    ((Main_function_partContext)_localctx).args_conds =  ((Main_function_partContext)_localctx).ad.args_conds;

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsContext extends ParserRuleContext {
		public ArrayList<String> args_names;
		public ArrayList<String> args_conds;
		public ArgumentContext argument;
		public ArgumentsContext ad;
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(HelloParser.COMMA, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitArguments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitArguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arguments);
		try {
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				((ArgumentsContext)_localctx).argument = argument();
				setState(76);
				match(COMMA);
				setState(77);
				((ArgumentsContext)_localctx).ad = arguments();

				        ((ArgumentsContext)_localctx).args_names =  ((ArgumentsContext)_localctx).ad.args_names;
				        _localctx.args_names.add(((ArgumentsContext)_localctx).argument.arg_name);
				        ((ArgumentsContext)_localctx).args_conds =  ((ArgumentsContext)_localctx).ad.args_conds;
				        if (((ArgumentsContext)_localctx).argument.arg_cond != null)
				            _localctx.args_conds.add(((ArgumentsContext)_localctx).argument.arg_cond);
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				((ArgumentsContext)_localctx).argument = argument();

				        ((ArgumentsContext)_localctx).args_names =  new ArrayList<String>();
				        _localctx.args_names.add(((ArgumentsContext)_localctx).argument.arg_name);
				        ((ArgumentsContext)_localctx).args_conds =  new ArrayList<String>();
				        if (((ArgumentsContext)_localctx).argument.arg_cond != null)
				            _localctx.args_conds.add(((ArgumentsContext)_localctx).argument.arg_cond);
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				((ArgumentsContext)_localctx).args_names =  null; ((ArgumentsContext)_localctx).args_conds =  null;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentContext extends ParserRuleContext {
		public String arg_name;
		public String arg_cond;
		public ArgumentContext oa;
		public Token WORD;
		public ConditionContext condition;
		public TerminalNode OPENBRACE() { return getToken(HelloParser.OPENBRACE, 0); }
		public TerminalNode CLOSEBRACE() { return getToken(HelloParser.CLOSEBRACE, 0); }
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public TerminalNode WORD() { return getToken(HelloParser.WORD, 0); }
		public TerminalNode PIPE() { return getToken(HelloParser.PIPE, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitArgument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitArgument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_argument);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				match(OPENBRACE);
				setState(87);
				((ArgumentContext)_localctx).oa = argument();
				setState(88);
				match(CLOSEBRACE);
				 ((ArgumentContext)_localctx).arg_name =  ((ArgumentContext)_localctx).oa.arg_name; ((ArgumentContext)_localctx).arg_cond =  ((ArgumentContext)_localctx).oa.arg_cond; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				((ArgumentContext)_localctx).WORD = match(WORD);
				setState(92);
				match(PIPE);
				setState(93);
				((ArgumentContext)_localctx).condition = condition();
				 ((ArgumentContext)_localctx).arg_name =  (((ArgumentContext)_localctx).WORD!=null?((ArgumentContext)_localctx).WORD.getText():null); ((ArgumentContext)_localctx).arg_cond =  ((ArgumentContext)_localctx).condition.view; 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				((ArgumentContext)_localctx).WORD = match(WORD);
				 ((ArgumentContext)_localctx).arg_name =  (((ArgumentContext)_localctx).WORD!=null?((ArgumentContext)_localctx).WORD.getText():null); ((ArgumentContext)_localctx).arg_cond =  "True"; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_usageContext extends ParserRuleContext {
		public String view;
		public Token WORD;
		public Token OPENBRACE;
		public ExpressionContext expression;
		public Token COMMA;
		public Token CLOSEBRACE;
		public TerminalNode WORD() { return getToken(HelloParser.WORD, 0); }
		public TerminalNode OPENBRACE() { return getToken(HelloParser.OPENBRACE, 0); }
		public TerminalNode CLOSEBRACE() { return getToken(HelloParser.CLOSEBRACE, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(HelloParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(HelloParser.COMMA, i);
		}
		public Function_usageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_usage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterFunction_usage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitFunction_usage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitFunction_usage(this);
			else return visitor.visitChildren(this);
		}
	}
